2003-05-14  Chris Toshok  <toshok@ximian.com>

	* gui/contact-editor/e-contact-editor.c (address_mailing_changed):
	handle the case where we haven't filled in the address yet. fixes
	#42620.

2003-05-14  JP Rosevear  <jpr@ximian.com>

	* gui/component/addressbook.c (addressbook_view_unref): clear the
	view
	(book_open_cb): track the book in the view, don't unref the book
	(set_prop): set the book
	(retrieve_shell_view_interface_from_control): get the shell view
	every time
	(set_folder_bar_label): release and unref the shell view

	* gui/component/addressbook-storage.h: add proto

	* gui/component/addressbook-storage.c
	(addressbook_storage_cleanup): unref the storage

	* gui/component/addressbook-component.c (owner_unset_cb): clean up
	storage

	* backend/ebook/e-book.c (e_book_load_uri): track the listener
	signal
	(e_book_dispose): unref the listener and disconnect the signal

2003-05-13  Chris Toshok  <toshok@ximian.com>

	* gui/component/select-names/e-select-names-text-model.c
	(e_select_names_text_model_set_separator): strlen ->
	g_utf8_strlen.
	(e_select_names_text_model_insert): same.
	(e_select_names_text_model_insert_length): big change, make this
	work with multibyte utf8.
	(e_select_names_text_model_delete): same.  this could possibly use
	a tighter loop + a memmove, but this works.

	* gui/component/select-names/e-select-names-model.c
	(e_select_names_model_get_textification): make sure our truncation
	to MAX_LENGTH characters uses utf8 characters, not bytes.
	(e_select_names_model_name_pos): track e-text-model change.
	pos/length are now in utf8 character terms, so use g_utf8_strlen
	instead of strlen.
	(e_select_names_model_text_pos): same.

2003-05-13  Chris Toshok  <toshok@ximian.com>

	* gui/widgets/e-addressbook-table-adapter.c (addressbook_dispose):
	rename addressbook_destroy to this, and guard against multiple
	calls.
	(e_addressbook_table_adapter_class_init): GtkObject -> GObject,
	and destroy -> dispose.